# mindcraft

./: .gitignore  AGENTS.md  Dockerfile  Justfile  README.py.md  README_PYTHON.md  TODO.md  docker-compose.yml  eslint.config.js  eslint.config.ts  flake.nix  impl-plan.md  justfile  main.js  main.py  main.ts  package.json  pyproject.toml  settings.js  settings.toml  settings.ts  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
ADR/: 0001-bootstrap-entry-contract.md  0001-convert-js-to-ts.md  0001-python-task-pool-and-runtime-integration.md  0002-ollama-error-throttling.md  0002-task-pool-file-loader.md  0003-model-interface-and-normalization.md  0003-task-pool-execution-loop.md  0004-python-owned-task-loading.md  0005-task-pool-bfs-runner.md  0006-task-assigned-execution-controller.md  0007-task-slot-orchestration.md  0008-python-js-task-boundary.md  0009-subgoal-vs-goal-termination.md
agent-docs/: README.md  command-catalog.md  commands.md  javascript.md  python.md  security.md  style.md  testing.md  workflow.md
agents/: Andy.json  Andy.toml  Bob.json  Bob.toml  Clara.json  Clara.toml
bots/: execTemplate.js  lintTemplate.js
docs/: core-features.md  core_features_diagram.md  execution_flow.md  flow_from_main.md  llm-state-spec.md  multi-agent-test-without-python-ja.md  pythonization-status-ja.md  runtime_flow.md
impl-log/: 2026-05-11-typescript-migration.md
impl-plan/: DONE.md  python-runtime-boundary.md  task-assigned-execution.md  task-pool-bfs-runner.md  task-pool-execution-loop-integration.md  task-pool-file-loader.md  task-slot-orchestration.md  v0.md  v1.1.md  v1.md  v2.1.md
mindcraft_py/: __init__.py  (+33 more)
(+155 files in other folders)
