[project]
name = "mindcraft"
version = "0.1.0"
description = "Python runtime for mindcraft"
readme = "README.py.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.37.11",
    "botocore==1.37.11",
    "pandas==2.2.3",
    "prettytable==3.16.0",
    "python-socketio[client]>=5.13.0,<6",
    "requests>=2.31.0",
    "tqdm==4.62.3",
]

[project.scripts]
mindcraft-py = "mindcraft_py.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "ruff>=0.11.2,<0.12",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 88
include = ["main.py", "mindcraft_py/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
