[project]
name = "mindcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "boto3==1.37.11",
    "botocore==1.37.11",
    "pandas==2.2.3",
    "prettytable==3.16.0",
    "python-socketio[client]==5.16.1",
    "tqdm==4.62.3",
]
